@@ -1530,7 +1530,6 @@
                     if(h)return"rgb"+(f?"a(":"(")+r+","+g+","+b+(f?","+m(a*1000)/1000:"")+")";
                     else return"#"+(4294967296+r*16777216+g*65536+b*256+(f?m(a*255):0)).toString(16).slice(1,f?undefined:-2)
                 }
-                const shadeAnimationSpeed = 0.02;
 
         class Shape {
             constructor(x, y) {
@@ -1598,11 +1597,12 @@
                 this.circleSpeed = shapeRotationSpeed[shapetype];
                 this.circleAngle = Math.random() * Math.PI * 2;
                 this.mass = shapeMass[shapetype];//relative mass
+                let maxshade = 0.5;//shapes turn 50% whiter when hit  (log, not linear)
                 if (shapetype > 5){//nonagon, decagon, hendecagon etc. dont turn very white upon collision with bullets or players
-                  
+                  maxshade = 0.03;
                 }
                 this.shade = 0;//shade indicates how white it turns when colliding
-                this.maxshade = 0.5;//50% whiteness (log, not linear)
+                this.maxshade = maxshade;
                 this.isHit = false;
             }
 
@@ -1689,7 +1689,7 @@
                 ctx.fillStyle = this.color;
                 ctx.strokeStyle = this.outline;
                 if (this.isHit){//if shape collided with player or bullet
-                  this.shade += shadeAnimationSpeed;//make shape whiter
+                  this.shade += (this.maxshade/25);//make shape whiter
                   if (this.shade > this.maxshade){
                     this.shade = this.maxshade;
                   }
@@ -1795,7 +1795,7 @@
                   this.isHit = false;//reset every loop AFTER drawing
                 }
                 else if (this.shade!=0){//if not hit, reduce shade
-                  this.shade -= shadeAnimationSpeed;
+                  this.shade -= (this.maxshade/25);
                   if (this.shade < 0){
                     this.shade = 0;
                   }
